2002-04-27  Jon K Hellan  <hellan@acm.org>

	* configure.in: Check for bonobo libraries when --with-bonobo is
	selected.

2002-04-27  Jody Goldberg <jody@gnome.org>

	* src/sheet-control-gui.c (scg_finalize) : destroy the views
	  before we destroy the control.

	* src/sheet-object.c (cb_sheet_object_view_finalized) : renamed from
	  sheet_object_view_destroyed and simplified to use weakrefs.  At this
	  point all we can do is remove the view from the list.
	(sheet_object_new_view) : using weakrefs we are more constrained.
	  object data is already done so there is no need to add refs to the
	  control.

2002-04-26  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c (wbcg_sheet_add) : Use
	  sc_object_create_view.

	* src/sheet-control-gui-priv.h (SCG_FOREACH_PANE) : new.
	* src/sheet-control-gui.c (scg_redraw_all) : use SCG_FOREACH_PANE.
	(scg_redraw_region) : ditto.
	(scg_resize) : ditto.
	(scg_set_zoom_factor) : ditto.
	(cb_table_destroy) : ditto.
	(sheet_control_gui_new) : ditto.
	(scg_unant) : ditto.
	(scg_ant) : ditto.
	(scg_adjust_preferences) : ditto.
	(scg_cursor_visible) : ditto.
	(scg_compute_visible_region) : ditto.
	(scg_edit_start) : ditto.
	(scg_edit_stop) : ditto.
	(scg_rangesel_changed) : ditto.
	(scg_rangesel_start) : ditto.
	(scg_rangesel_stop) : ditto.
	(scg_set_display_cursor) : ditto.
	(scg_colrow_resize_stop) : ditto.
	(scg_colrow_resize_start) : ditto.
	(scg_colrow_resize_move) : ditto.
	(scg_special_cursor_start) : ditto.
	(scg_special_cursor_stop) : ditto.
	(scg_special_cursor_bound_set) : ditto.
	(scg_object_stop_editing) : clear the control points in the panes.
	(scg_mode_edit_object) : ditto.
	(scg_object_update_bbox) : ditto.

	* src/gnumeric-pane.c (gnm_pane_init) : init anted_cursors and the
	  control points.  Optionally create views of all the objects if we
	  already have a sheet.
	(gnm_pane_object_stop_editing) : transfered from scg.
	(gnm_pane_object_move) : ditto.
	(cb_slide_handler) : ditto.