@@ -271,6 +271,10 @@ gnumeric_bonobo_read_from_stream (BonoboPersistStream       *ps,
 	}	
 
 	g_object_unref (G_OBJECT (ioc));
+
+	workbook_recalc (wb);
+	g_return_val_if_fail (!workbook_is_dirty (wb), FALSE);
+	sheet_update (wb_view_cur_sheet (wb_view));
 	return;
 
 exit_error:
